Add pytest requirements to travis
Just covers the need for CI after removing them from the setup.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,7 @@ matrix:
   allow_failures:
     - python: "nightly"
 
+install:
+  - pip install pytest pytest-runner pytest-benchmark
+
 script: python setup.py test
