--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["2.7", "3.X"]
+        python-version: ["2.7", "3.7 - 3.X"]
 
     steps:
       - uses: actions/checkout@v2
