--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -14,9 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: "2.7 - 3.X"
-        exclude:
-          - python-version: "3.0 - 3.6"
+        python-version: ["2.7", "3.7", "3.8", "3.9", "3.10", "3.X"]
 
     steps:
       - uses: actions/checkout@v2
